feat: Add initial version of the reviews importer | NPG-7896 (#510)
# Description

Added new reviews importer.
It is an initial version and non fully complete, right now it is able
only dowload xls files from the ideascale.
Later it is needed to process dowloaded data and insert it into db

--- a/utilities/ideascale-importer/pyproject.toml
+++ b/utilities/ideascale-importer/pyproject.toml
@@ -38,6 +38,7 @@ typing-extensions = "~4.7.1"
 yarl = "1.8.2"
 loguru = "^0.6.0"
 brotlipy = "^0.7.0"
+lxml = "4.9.0"
 
 [tool.poetry.group.dev.dependencies]
 mypy = ">=1"
