--- a/src/cat-data-service/Cargo.toml
+++ b/src/cat-data-service/Cargo.toml
@@ -14,13 +14,13 @@ tracing-subscriber = { workspace = true, features = ["fmt", "json"]}
 
 serde = { version = "1.0", features = ["derive"] }
 serde_json = { version = "1.0" }
-serde_with = { version = "2", features = ["macros"] }
+serde_with = { version = "3", features = ["macros"] }
 
 tokio = { version = "1.8", features = ["rt", "macros", "rt-multi-thread"] }
 thiserror = { version = "1.0" }
 axum = { version = "0.6.9" }
-metrics = { version = "0.18" }
-metrics-exporter-prometheus = { version = "0.8" }
+metrics = { version = "0.21.1" }
+metrics-exporter-prometheus = { version = "0.12.1" }
 
 tower-http = { version = "0.4", features = ["cors"] }
 
@@ -31,8 +31,11 @@ chrono = { workspace = true }
 jormungandr-lib = { workspace = true, optional = true }
 chain-impl-mockchain = { workspace = true, optional = true }
 
-quickcheck = { version = "0.9", optional = true }
-quickcheck_macros = { version = "0.9", optional = true }
+quickcheck = { version = "1.0.3", optional = true }
+quickcheck_macros = { version = "1.0.0", optional = true }
+
+poem = "1.3.57"
+poem-openapi = { version = "3.0.3", features = ["openapi-explorer", "rapidoc", "redoc", "swagger-ui"] }
 
 [dev-dependencies]
 tower = { version = "0.4", features = ["util"] }
