--- a/src/cat-data-service/Cargo.toml
+++ b/src/cat-data-service/Cargo.toml
@@ -34,8 +34,12 @@ chain-impl-mockchain = { workspace = true, optional = true }
 quickcheck = { version = "1.0.3", optional = true }
 quickcheck_macros = { version = "1.0.0", optional = true }
 
-poem = "1.3.57"
+poem = { version = "1.3.57", features = ["opentelemetry", "prometheus"] }
 poem-openapi = { version = "3.0.3", features = ["openapi-explorer", "rapidoc", "redoc", "swagger-ui"] }
+
+# Metrics - Poem
+opentelemetry-prometheus = { version = "0.13"}
+opentelemetry = {  version = "0.19", features = ["metrics"]}
 
 [dev-dependencies]
 tower = { version = "0.4", features = ["util"] }
