--- a/Cargo.toml
+++ b/Cargo.toml
@@ -115,3 +115,5 @@ rust_decimal = { version = "1.29" }
 
 reqwest = { version = "0.11", default-features = false, features = ["blocking", "json", "rustls-tls"] }
 warp-reverse-proxy = { version = "0.3", default-features = false, features = ["rustls-tls"] }
+
+once_cell = "1"
