--- a/src/catalyst-toolbox/catalyst-toolbox/Cargo.toml
+++ b/src/catalyst-toolbox/catalyst-toolbox/Cargo.toml
@@ -39,7 +39,7 @@ rayon = "1.5"
 rust_decimal = "1.16"
 rust_decimal_macros = "1"
 futures = "0.3"
-once_cell = "1.8"
+once_cell = { workspace = true }
 reqwest = { workspace = true }
 rand = "0.8.3"
 rand_chacha = "0.3"
