--- a/Cargo.toml
+++ b/Cargo.toml
@@ -77,16 +77,16 @@ nonempty = { version = "0.8", features = ["serialize"] }
 validity = "0.3.1"
 
 # Observability tools to instrument, generate, collect, and export telemetry data.
-opentelemetry = { version = "0.19", features = ["rt-tokio"] }
-opentelemetry-otlp = "0.11.0"
-opentelemetry-semantic-conventions = "0.10.0"
+opentelemetry = { version = "0.19", features = ["rt-tokio", "metrics"] }
+opentelemetry-otlp = "0.12.0"
+opentelemetry-semantic-conventions = "0.11.0"
 
 # Framework for instrumenting Rust programs to collect structured, event-based diagnostic information.
 tracing = "0.1.37"
 tracing-appender = "0.2.2"
 tracing-futures = "0.2.5"
 tracing-subscriber = "0.3.16"
-tracing-opentelemetry = "0.18.0"
+tracing-opentelemetry = "0.19"  # MUST be the same version as `opentelemetry`
 tracing-test = "0.2.3"
 
 # small utility crate for nice table printout for variuos cmd tools
