--- a/src/cat-data-service/Cargo.toml
+++ b/src/cat-data-service/Cargo.toml
@@ -31,9 +31,6 @@ chrono = { workspace = true }
 jormungandr-lib = { workspace = true, optional = true }
 chain-impl-mockchain = { workspace = true, optional = true }
 
-quickcheck = { version = "1.0.3", optional = true }
-quickcheck_macros = { version = "1.0.0", optional = true }
-
 poem = { version = "1.3.57", features = ["opentelemetry", "prometheus"] }
 poem-openapi = { version = "3.0.3", features = ["openapi-explorer", "rapidoc", "redoc", "swagger-ui"] }
 
@@ -41,10 +38,11 @@ poem-openapi = { version = "3.0.3", features = ["openapi-explorer", "rapidoc", "
 opentelemetry-prometheus = { version = "0.13"}
 opentelemetry = { workspace = true }
 
-once_cell = { workspace = true }
-
 [dev-dependencies]
 tower = { version = "0.4", features = ["util"] }
+quickcheck = { version = "0.9" }
+quickcheck_macros = { version = "0.9" }
+
 
 [features]
-jorm-mock = ["jormungandr-lib", "chain-impl-mockchain/property-test-api", "quickcheck", "quickcheck_macros"]
+jorm-mock = ["jormungandr-lib", "chain-impl-mockchain/property-test-api"]
