--- a/services/voting-node/poetry.toml
+++ b/services/voting-node/poetry.toml
@@ -4,7 +4,7 @@ prefer-active-python = true
 
 [virtualenvs.options]
 no-pip = true
-#no-setuptools = true
+no-setuptools = true
 
 [tool.pytest.ini_options]
 addopts = [
