--- a/src/cat-data-service/Cargo.toml
+++ b/src/cat-data-service/Cargo.toml
@@ -43,6 +43,10 @@ opentelemetry = { workspace = true }
 
 once_cell = { workspace = true }
 
+cryptoxide = { workspace = true }
+
+uuid = { workspace = true }
+
 [dev-dependencies]
 tower = { version = "0.4", features = ["util"] }
 
