exclude cat-data-service and event-db from githubactions CI

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -248,6 +248,8 @@ jobs:
             --exclude vit-servicing-station-server \
             --exclude vit-servicing-station-tests \
             --exclude vit-servicing-station-lib \
+            --exclude cat-data-service \
+            --exclude event-db \
             --archive-file nextest-archive.tar.zst
 
       - name: Run Catalyst Core tests
