--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -248,7 +248,8 @@ jobs:
             --exclude vit-servicing-station-server \
             --exclude vit-servicing-station-tests \
             --exclude vit-servicing-station-lib \
-            --exclude cat-data-service \
+            # we are excluding cat-dat-service and event-db because we are already running it with Earthly
+            --exclude cat-data-service \ 
             --exclude event-db \
             --archive-file nextest-archive.tar.zst
 
