--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -137,6 +137,9 @@ jobs:
             --exclude vit-servicing-station-server \
             --exclude vit-servicing-station-tests \
             --exclude vit-servicing-station-lib \
+            # we are excluding cat-dat-service and event-db because we are already running it with Earthly
+            --exclude cat-data-service \ 
+            --exclude event-db \
             --archive-file nextest-archive.tar.zst
 
       - name: Save test archive
