--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -124,7 +124,8 @@ jobs:
       - name: Install dependencies
         run:
           sudo apt install -y protobuf-compiler libssl-dev libpq-dev libsqlite3-dev pkg-config
-
+      
+      # We are excluding cat-dat-service and event-db because we are already running it with Earthly
       - name: Build and archive tests
         run: | 
           cargo nextest archive \
@@ -137,7 +138,6 @@ jobs:
             --exclude vit-servicing-station-server \
             --exclude vit-servicing-station-tests \
             --exclude vit-servicing-station-lib \
-            # we are excluding cat-dat-service and event-db because we are already running it with Earthly
             --exclude cat-data-service \ 
             --exclude event-db \
             --archive-file nextest-archive.tar.zst
@@ -238,6 +238,7 @@ jobs:
           PGPASSWORD: 123456
         run: cargo make local-event-db-test -h 127.0.0.1 -U postgres
 
+      # We are excluding cat-dat-service and event-db because we are already running it with Earthly
       - name: Build and archive tests
         if: steps.archive-cache.outputs.cache-hit != 'true'
         run: | 
@@ -251,7 +252,6 @@ jobs:
             --exclude vit-servicing-station-server \
             --exclude vit-servicing-station-tests \
             --exclude vit-servicing-station-lib \
-            # we are excluding cat-dat-service and event-db because we are already running it with Earthly
             --exclude cat-data-service \ 
             --exclude event-db \
             --archive-file nextest-archive.tar.zst
