--- a/src/cat-data-service/Cargo.toml
+++ b/src/cat-data-service/Cargo.toml
@@ -10,7 +10,7 @@ event-db = { path = "../event-db" }
 
 clap = { workspace = true }
 tracing = { workspace = true }
-tracing-subscriber = { workspace = true, features = ["fmt", "json"]}
+tracing-subscriber = { workspace = true, features = ["fmt", "json"] }
 
 serde = { version = "1.0", features = ["derive"] }
 serde_json = { version = "1.0" }
@@ -24,7 +24,7 @@ metrics-exporter-prometheus = { version = "0.12.1" }
 
 tower-http = { version = "0.4", features = ["cors"] }
 
-rust_decimal = {  workspace = true }
+rust_decimal = { workspace = true }
 
 chrono = { workspace = true }
 
@@ -32,10 +32,18 @@ jormungandr-lib = { workspace = true, optional = true }
 chain-impl-mockchain = { workspace = true, optional = true }
 
 poem = { version = "1.3.57", features = ["opentelemetry", "prometheus"] }
-poem-openapi = { version = "3.0.3", features = ["openapi-explorer", "rapidoc", "redoc", "swagger-ui"] }
+poem-openapi = { version = "3.0.3", features = [
+    "openapi-explorer",
+    "rapidoc",
+    "redoc",
+    "swagger-ui",
+    "uuid",
+    "url",
+] }
+poem-extensions = { version = "0.7.2" }
 
 # Metrics - Poem
-opentelemetry-prometheus = { version = "0.13"}
+opentelemetry-prometheus = { version = "0.13" }
 opentelemetry = { workspace = true }
 
 once_cell = { workspace = true }
@@ -43,6 +51,14 @@ once_cell = { workspace = true }
 cryptoxide = { workspace = true }
 
 uuid = { workspace = true }
+
+lazy_static = { workspace = true }
+
+url = { workspace = true }
+
+dotenvy = { workspace = true }
+
+panic-message = "0.3"
 
 [dev-dependencies]
 tower = { version = "0.4", features = ["util"] }
