--- a/.github/workflows/ci-test.yml
+++ b/.github/workflows/ci-test.yml
@@ -32,6 +32,6 @@ jobs:
           password: ${{ secrets.GITHUB_TOKEN }}
       - name: Run tests
         env:
-          EARTHLY_SECRETS: "IDEASCALE_EMAIL=$IDEASCALE_EMAIL, IDEASCALE_PASSWORD=$IDEASCALE_PASSWORD, IDEASCALE_API_TOKEN=$IDEASCALE_API_TOKEN"
+          EARTHLY_SECRETS: "IDEASCALE_EMAIL=${{ secrets.IDEASCALE_EMAIL }}, IDEASCALE_PASSWORD=$${{ secrets.IDEASCALE_PASSWORD }}, IDEASCALE_API_TOKEN=${{ secrets.IDEASCALE_API_TOKEN }}"
         run: |
           earthly -P --remote-cache=ghcr.io/${{ github.repository }}:cache +test
