feat(cat-data-service): Add API env vars to set the hostnames

--- a/src/cat-data-service/Cargo.toml
+++ b/src/cat-data-service/Cargo.toml
@@ -60,6 +60,8 @@ dotenvy = { workspace = true }
 
 panic-message = "0.3"
 
+regex = { workspace = true }
+
 [dev-dependencies]
 tower = { version = "0.4", features = ["util"] }
 quickcheck = { version = "0.9" }
