feat(cat-data-service): Logging, Metrics and tracing now works correctly.

--- a/src/cat-data-service/Cargo.toml
+++ b/src/cat-data-service/Cargo.toml
@@ -10,7 +10,7 @@ event-db = { path = "../event-db" }
 
 clap = { workspace = true }
 tracing = { workspace = true }
-tracing-subscriber = { workspace = true, features = ["fmt", "json"] }
+tracing-subscriber = { workspace = true, features = ["fmt", "json", "time"] }
 
 serde = { version = "1.0", features = ["derive"] }
 serde_json = { version = "1.0" }
@@ -31,14 +31,14 @@ chrono = { workspace = true }
 jormungandr-lib = { workspace = true, optional = true }
 chain-impl-mockchain = { workspace = true, optional = true }
 
-poem = { version = "1.3.58", features = ["opentelemetry", "prometheus"] }
+poem = { version = "1.3.58", features = ["embed", "prometheus", "compression"] }
 poem-openapi = { version = "3.0.4", features = [
     "openapi-explorer",
     "rapidoc",
     "redoc",
     "swagger-ui",
     "uuid",
-    "url",
+    "url"
 ] }
 poem-extensions = { version = "0.7.2" }
 
@@ -56,6 +56,10 @@ regex = { workspace = true }
 tower = { version = "0.4", features = ["util"] }
 hyper = "0.14"
 bytes = "1.4"
+cpu-time = "1.0"
+arc-swap = "1.6"
+ulid = { version = "1.0.1", features = ["serde", "uuid"] }
+rust-embed = "8"
 
 [dev-dependencies]
 quickcheck = { version = "0.9" }
