--- a/src/cat-data-service/Cargo.toml
+++ b/src/cat-data-service/Cargo.toml
@@ -31,7 +31,7 @@ chrono = { workspace = true }
 jormungandr-lib = { workspace = true, optional = true }
 chain-impl-mockchain = { workspace = true, optional = true }
 
-poem = { version = "1.3.58", features = ["embed", "prometheus", "compression"] }
+poem = { version = "1.3.58", features = ["embed", "prometheus", "compression", "test"] }
 poem-openapi = { version = "3.0.4", features = [
     "openapi-explorer",
     "rapidoc",
