--- a/src/catalyst-toolbox/catalyst-toolbox/Cargo.toml
+++ b/src/catalyst-toolbox/catalyst-toolbox/Cargo.toml
@@ -45,9 +45,9 @@ rand = "0.8.3"
 rand_chacha = "0.3"
 governor = { version = "0.4", features = ["std", "jitter"], default-features = false}
 regex = "1.5"
-serde = "1.0"
-serde_json = "1.0"
-serde_yaml = "0.8.17"
+serde = { workspace = true }
+serde_json = { workspace = true }
+serde_yaml = { workspace = true }
 sscanf = "0.1"
 color-eyre = "0.6"
 thiserror = "1.0"
