--- a/src/chain-libs/chain-addr/Cargo.toml
+++ b/src/chain-libs/chain-addr/Cargo.toml
@@ -15,6 +15,8 @@ chain-core = { path = "../chain-core" }
 chain-crypto = { path = "../chain-crypto" }
 cryptoxide = "0.4"
 
+serde = { workspace = true, features = [ "derive" ] }
+
 quickcheck = { version = "0.9", optional = true }
 proptest = { workspace = true, optional = true }
 test-strategy = { version = "0.2", optional = true }
