feat: Add `registration/voter` endpoint to poem service | NPG-8137 (#559)
# Description

- Added `registration/voter` endpoint implementation for poem service
- Made small refactoring

## Type of change

Please delete options that are not relevant.

- [ ] Bug fix (non-breaking change which fixes an issue)
- [X] New feature (non-breaking change which adds functionality)
- [ ] Breaking change (fix or feature that would cause existing
functionality to not work as expected)
- [ ] This change requires a documentation update

## How Has This Been Tested?

Please describe the tests that you ran to verify your changes. Provide
instructions so we can reproduce.
Please also list any relevant details for your test configuration

- [x] voter_test

---------

Co-authored-by: Steven Johnson <stevenj@users.noreply.github.com>

--- a/src/cat-data-service/Cargo.toml
+++ b/src/cat-data-service/Cargo.toml
@@ -31,14 +31,15 @@ chrono = { workspace = true }
 jormungandr-lib = { workspace = true, optional = true }
 chain-impl-mockchain = { workspace = true, optional = true }
 
-poem = { version = "1.3.58", features = ["embed", "prometheus", "compression"] }
+poem = { version = "1.3.58", features = ["embed", "prometheus", "compression", "test"] }
 poem-openapi = { version = "3.0.4", features = [
     "openapi-explorer",
     "rapidoc",
     "redoc",
     "swagger-ui",
     "uuid",
-    "url"
+    "url",
+    "chrono",
 ] }
 poem-extensions = { version = "0.7.2" }
 
