--- a/.github/workflows/ci-test.yml
+++ b/.github/workflows/ci-test.yml
@@ -1,9 +1,9 @@
 name: CI Test
 
-on:
-  pull_request:
-    branches:
-      - main
+on: {}
+  # pull_request:
+  #   branches:
+  #     - main
 
 permissions:
   id-token: write
