--- a/.github/workflows/cordova_publish.yml
+++ b/.github/workflows/cordova_publish.yml
@@ -1,4 +1,4 @@
-name: Release cordova extension
+name: Release cordova extension package
 
 on:
   push:
@@ -10,7 +10,7 @@ on:
 
 jobs:
   initial_release:
-    name: Publish wasm package
+    name: Publish cordova extension package
     runs-on: ubuntu-latest
     outputs:
       upload_url: ${{ steps.create_release.outputs.upload_url }}
@@ -92,13 +92,13 @@ jobs:
           submodules: true
 
       - name: build universal lib
-        working-directory: ./bindings/wallet-cordova/scripts
+        working-directory: ./src/chain-wallet-libs/bindings/wallet-cordova/scripts
         run: python3 ./build_ios.py
 
       - uses: actions/upload-artifact@v1
         with:
           name: iosLibs
-          path: ./bindings/wallet-cordova/src/ios
+          path: ./src/chain-wallet-libs/bindings/wallet-cordova/src/ios
 
   package_cordova_plugin:
     runs-on: ubuntu-latest
@@ -116,43 +116,36 @@ jobs:
           name: jniLibs
 
       - name: make libs directory
-        run: mkdir -p bindings/wallet-cordova/src/android/libs
+        run: mkdir -p src/chain-wallet-libs/bindings/wallet-cordova/src/android/libs
 
       - name: Copy libs
-        run: cp -r jniLibs/* bindings/wallet-cordova/src/android/libs
+        run: cp -r jniLibs/* src/chain-wallet-libs/bindings/wallet-cordova/src/android/libs
 
       - name: rename arm64-v8a
-        working-directory: ./bindings/wallet-cordova/src/android/libs
+        working-directory: ./src/chain-wallet-libs/bindings/wallet-cordova/src/android/libs
         run: mv aarch64-linux-android arm64-v8a
 
       - name: rename armv7-linux-androideabi
-        working-directory: ./bindings/wallet-cordova/src/android/libs
+        working-directory: ./src/chain-wallet-libs/bindings/wallet-cordova/src/android/libs
         run: mv armv7-linux-androideabi armeabi-v7a
 
       - name: rename i686-linux-android
-        working-directory: ./bindings/wallet-cordova/src/android/libs
+        working-directory: ./src/chain-wallet-libs/bindings/wallet-cordova/src/android/libs
         run: mv i686-linux-android x86
 
       - name: rename x86_64
-        working-directory: ./bindings/wallet-cordova/src/android/libs
+        working-directory: ./src/chain-wallet-libs/bindings/wallet-cordova/src/android/libs
         run: mv x86_64-linux-android x86_64
-
-      - name: Install wasm pack
-        run: curl https://rustwasm.github.io/wasm-pack/installer/init.sh -sSf | sh
-
-      - name: build wasm for electron
-        working-directory: ./bindings/wallet-cordova/scripts
-        run: python3 ./build_wasm.py
 
       - name: Install uniffi
         uses: actions-rs/install@v0.1
         with:
           crate: uniffi_bindgen
-          version: 0.20.0
+          version: 0.21.1
           use-tool-cache: true
 
       - name: copy java definitions from jni
-        run: python3 ./bindings/wallet-cordova/scripts/copy_jni_definitions.py
+        run: python3 ./src/chain-wallet-libs/bindings/wallet-cordova/scripts/copy_jni_definitions.py
 
       - name: Download artifact with universal lib
         uses: actions/download-artifact@v1
@@ -160,7 +153,7 @@ jobs:
           name: iosLibs
 
       - name: Copy universal lib to plugin's directory
-        run: cp -r iosLibs/* bindings/wallet-cordova/src/ios
+        run: cp -r iosLibs/* src/chain-wallet-libs/bindings/wallet-cordova/src/ios
 
       - name: setup node
         uses: actions/setup-node@v1
@@ -168,7 +161,7 @@ jobs:
           node-version: 12.x
 
       - name: package module
-        run: npm pack ./bindings/wallet-cordova
+        run: npm pack ./src/chain-wallet-libs/bindings/wallet-cordova
 
       - name: rename-tarball
         run: |
