--- a/.github/workflows/cordova_publish.yml
+++ b/.github/workflows/cordova_publish.yml
@@ -51,12 +51,16 @@ jobs:
         with:
           submodules: true
 
+      - name: Install rust toolchain
+        uses: actions-rs/toolchain@v1
+        with:
+          toolchain: 1.67
+
       - name: Build library (release)
         uses: actions-rs/cargo@v1
         env:
           RUSTFLAGS: "-C embed-bitcode"
         with:
-          toolchain: 1.67
           use-cross: true
           command: rustc
           args: --release --target ${{ matrix.config.target }} -p wallet-uniffi --features builtin-bindgen -- -C link-args=-ldl
