--- a/.github/workflows/cordova_publish.yml
+++ b/.github/workflows/cordova_publish.yml
@@ -43,9 +43,9 @@ jobs:
     strategy:
       matrix:
         config:
-          # - { target: aarch64-linux-android }
+          - { target: aarch64-linux-android }
           - { target: armv7-linux-androideabi }
-          # - { target: i686-linux-android }
+          - { target: i686-linux-android }
           - { target: x86_64-linux-android }
 
     steps:
@@ -135,17 +135,17 @@ jobs:
       - name: Copy libs
         run: cp -r jniLibs/* src/chain-wallet-libs/bindings/wallet-cordova/src/android/libs
 
-      # - name: rename arm64-v8a
-      #   working-directory: ./src/chain-wallet-libs/bindings/wallet-cordova/src/android/libs
-      #   run: mv aarch64-linux-android arm64-v8a
+      - name: rename arm64-v8a
+        working-directory: ./src/chain-wallet-libs/bindings/wallet-cordova/src/android/libs
+        run: mv aarch64-linux-android arm64-v8a
 
       - name: rename armv7-linux-androideabi
         working-directory: ./src/chain-wallet-libs/bindings/wallet-cordova/src/android/libs
         run: mv armv7-linux-androideabi armeabi-v7a
 
-      # - name: rename i686-linux-android
-      #   working-directory: ./src/chain-wallet-libs/bindings/wallet-cordova/src/android/libs
-      #   run: mv i686-linux-android x86
+      - name: rename i686-linux-android
+        working-directory: ./src/chain-wallet-libs/bindings/wallet-cordova/src/android/libs
+        run: mv i686-linux-android x86
 
       - name: rename x86_64
         working-directory: ./src/chain-wallet-libs/bindings/wallet-cordova/src/android/libs
