--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -140,6 +140,7 @@ jobs:
             --exclude vit-servicing-station-lib \
             --exclude cat-data-service \
             --exclude event-db \
+            --exclude wallet-uniffi \
             --archive-file nextest-archive.tar.zst
 
       - name: Save test archive
@@ -254,6 +255,7 @@ jobs:
             --exclude vit-servicing-station-lib \
             --exclude cat-data-service \
             --exclude event-db \
+            --exclude wallet-uniffi \
             --archive-file nextest-archive.tar.zst
 
       - name: Run Catalyst Core tests
