feat: Cordova wallet extension build | NPG-8179 (#568)
# Description

Add CD job for cordova wallet extension

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -140,6 +140,7 @@ jobs:
             --exclude vit-servicing-station-lib \
             --exclude cat-data-service \
             --exclude event-db \
+            --exclude wallet-uniffi \
             --archive-file nextest-archive.tar.zst
 
       - name: Save test archive
@@ -254,6 +255,7 @@ jobs:
             --exclude vit-servicing-station-lib \
             --exclude cat-data-service \
             --exclude event-db \
+            --exclude wallet-uniffi \
             --archive-file nextest-archive.tar.zst
 
       - name: Run Catalyst Core tests
@@ -373,6 +375,13 @@ jobs:
       - name: Install dependencies
         run:
           sudo apt install -y protobuf-compiler libssl-dev libpq-dev libsqlite3-dev pkg-config
+
+      - name: Install uniffi
+        uses: actions-rs/install@v0.1
+        with:
+          crate: uniffi_bindgen
+          version: 0.21.1
+          use-tool-cache: true
 
       - name: Clippy and fmt
         uses: actions-rs/toolchain@v1
