--- a/.github/workflows/cordova_publish.yml
+++ b/.github/workflows/cordova_publish.yml
@@ -4,6 +4,9 @@ on:
   push:
     tags:
       - cordova-*
+  pull_request:
+    branches:
+      - main
 
 env:
   RUST_LATEST_STABLE_VERSION: 1.67
@@ -113,7 +116,7 @@ jobs:
 
   package_cordova_plugin:
     runs-on: ubuntu-latest
-    needs: [build_uniffi, build_lipo_asset]
+    needs: [initial_release, build_uniffi, build_lipo_asset]
 
     steps:
       - name: Checkout code
