--- a/.github/workflows/cordova_publish.yml
+++ b/.github/workflows/cordova_publish.yml
@@ -181,7 +181,7 @@ jobs:
         run: |
           find ./src/chain-wallet-libs \
             -name wallet-cordova-plugin*.tgz \
-            -exec mv {} \
+            -exec mv {} {}.tgz \;
           ls
 
       - name: Upload binaries to release
