--- a/.github/workflows/cordova_publish.yml
+++ b/.github/workflows/cordova_publish.yml
@@ -182,6 +182,7 @@ jobs:
           find ./src/chain-wallet-libs \
             -name wallet-cordova-plugin*.tgz \
             -exec mv {} {}.tgz \;
+          mv wallet-cordova-plugin*.tgz wallet-cordova-plugin-${{ needs.initial_release.outputs.version }}.tgz
           ls
 
       - name: Upload binaries to release
