--- a/.github/workflows/cordova_publish.yml
+++ b/.github/workflows/cordova_publish.yml
@@ -181,8 +181,7 @@ jobs:
         run: |
           find ./src/chain-wallet-libs \
             -name wallet-cordova-plugin*.tgz \
-            -exec mv {} {}.tgz \;
-          mv wallet-cordova-plugin*.tgz wallet-cordova-plugin-${{ needs.initial_release.outputs.version }}.tgz
+            -exec mv {} wallet-cordova-plugin-${{ needs.initial_release.outputs.version }}.tgz \;
           ls
 
       - name: Upload binaries to release
