--- a/.github/workflows/cordova_publish.yml
+++ b/.github/workflows/cordova_publish.yml
@@ -174,7 +174,8 @@ jobs:
 
       - name: rename-tarball
         run: |
-          find ./src/chain-wallet-libs -name wallet-cordova-plugin*.tgz -exec mv {} wallet-cordova-plugin-${{ needs.initial_release.outputs.version }}.tgz \;
+          find ./src/chain-wallet-libs -name wallet-cordova-plugin*.tgz -exec mv {} {} \;
+          mv wallet-cordova-plugin*.tgz wallet-cordova-plugin-${{ needs.initial_release.outputs.version }}.tgz
           ls
 
       - name: Upload binaries to release
