--- a/.github/workflows/cordova_publish.yml
+++ b/.github/workflows/cordova_publish.yml
@@ -185,5 +185,5 @@ jobs:
         with:
           upload_url: ${{ needs.initial_release.outputs.upload_url }}
           asset_path: ./wallet-cordova-plugin-${{ needs.initial_release.outputs.version }}.tgz
-          asset_name: chain-wallet-libs-cordova-${{ needs.initial_release.outputs.version }}
+          asset_name: wallet-cordova-plugin-${{ needs.initial_release.outputs.version }}.tgz
           asset_content_type: application/gzip
