--- a/Cargo.toml
+++ b/Cargo.toml
@@ -54,6 +54,10 @@ members = [
   "src/voting-tools-rs",
   "src/cat-data-service",
   "src/audit",
+  "src/vit-servicing-station-f10/vit-servicing-station-cli-f10",
+  "src/vit-servicing-station-f10/vit-servicing-station-lib-f10",
+  "src/vit-servicing-station-f10/vit-servicing-station-server-f10",
+  "src/vit-servicing-station-f10/vit-servicing-station-tests-f10",
 ]
 
 [workspace.dependencies]
