--- a/src/vit-servicing-station-f10/snapshot-service/Cargo.toml
+++ b/src/vit-servicing-station-f10/snapshot-service/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2021"
 
 [dependencies]
 voting-hir = { git = "https://github.com/input-output-hk/catalyst-toolbox", branch = "catalyst-fund9" }
-notify = "=5.0.0-pre.11"
+notify = "5"
 serde = { version = "1.0.136", features = ["derive"] }
 serde_json = "1.0.79"
 tracing = "0.1.34"
