--- a/src/vit-servicing-station-f10/vit-servicing-station-lib-f10/Cargo.toml
+++ b/src/vit-servicing-station-f10/vit-servicing-station-lib-f10/Cargo.toml
@@ -30,7 +30,7 @@ tracing-subscriber = "0.3"
 warp = { version = "0.3", features = ["tls"] }
 eccoxide = { git = "https://github.com/eugene-babichenko/eccoxide.git", branch = "fast-u64-scalar-mul", features = ["fast-u64-scalar-mul"], optional = true }
 http-zipkin = "0.3.0"
-notify = "=5.0.0-pre.11"
+notify = "5"
 voting-hir = { git = "https://github.com/input-output-hk/catalyst-toolbox", branch = "catalyst-fund9", features = ["serde"] }
 snapshot-service = { path = "../snapshot-service" }
 
