--- a/src/vit-servicing-station-f10/snapshot-service/Cargo.toml
+++ b/src/vit-servicing-station-f10/snapshot-service/Cargo.toml
@@ -13,6 +13,6 @@ serde_json = "1.0.79"
 tracing = "0.1.34"
 thiserror = "1.0.30"
 warp = "0.3.2"
-jormungandr-lib = { git = "https://github.com/input-output-hk/jormungandr", branch = "catalyst-fund9" }
+jormungandr-lib = { workspace = true }
 sled = "0.34.7"
 tokio = "1.18.0"
