--- a/src/vit-servicing-station-f10/vit-servicing-station-tests-f10/Cargo.toml
+++ b/src/vit-servicing-station-f10/vit-servicing-station-tests-f10/Cargo.toml
@@ -31,7 +31,7 @@ quickcheck_macros = { version = "0.9" }
 predicates = { version = "2.0", default-features = false, features = ["diff"] }
 jortestkit = { git = "https://github.com/input-output-hk/jortestkit.git", branch = "master" }
 chain-impl-mockchain = { git = "https://github.com/input-output-hk/chain-libs.git", branch = "catalyst-fund9", features = [ "property-test-api" ] }
-chain-addr      = { git = "https://github.com/input-output-hk/chain-libs.git", branch = "catalyst-fund9", features = [ "property-test-api" ] }
+chain-addr      = { path = "../../chain-libs/chain-addr", features = [ "property-test-api" ] }
 chain-crypto    = { git = "https://github.com/input-output-hk/chain-libs.git", branch = "catalyst-fund9", features = [ "property-test-api" ] }
 voting-hir = { git = "https://github.com/input-output-hk/catalyst-toolbox", branch = "catalyst-fund9", features = ["serde"] }
 fake = { version = "2.2", features=['http']}
